Fix th alignment.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -398,3 +398,7 @@ html {
 body {
   font-size: 1.6rem;
 }
+
+th {
+  text-align: left;
+}
